--- a/en/activation/_posts/2015-07-20-yarn-box.md
+++ b/en/activation/_posts/2015-07-20-yarn-box.md
@@ -9,7 +9,7 @@ image:
 
 For this one you need a cardboard box, masking tape, some yarn, scissors, a needle and any treats or kibbles.
 
-I chose a shoe box and I put one round of masking tape around it to make it stronger. Then I punched several holes at different heights with scissors on both sides of the box. After this I wired many rounds of yarn with a needle through these holes I made, and finally secured it with knots. I used about 5 meters (15 foot) of yarn altogether. 
+I chose a shoe box and I put one round of masking tape around it to make it stronger. Then I punched several holes at different heights with scissors on both sides of the box. After this I wired many rounds of yarn with a needle through these holes I made, and finally secured it with knots. I used about 5 meters (16 feet) of yarn altogether. 
 
 After this I put three empty treat tubes and two small soda bottles as obstacles to the bottom of the box. But you can use any obstacles you want for example tennis balls, empty paper rolls, paper balls etc. The obstacles need to be soft or rounded, so the dog doesn’t hurt his nose while plowing in the box.
 
