--- a/en/activation/_posts/2015-07-20-cones.md
+++ b/en/activation/_posts/2015-07-20-cones.md
@@ -9,7 +9,7 @@ image:
 
 For the honor of late summer, I did these cones inspired by ice cream cones :) for Miki.
 
-I used carton coffee cups for this game and I put one treat in each cup. I cut about 5 cm (2") piece of Planet Pet Society Chicken Stick and pushed it to the bottom of the cup so that it got stuck in there. Then I put Kong toys or tennis balls on the top. I also pushed the tennis balls and the Kong toys as deep as possible.
+I used carton coffee cups for this game and I put one treat in each cup. I cut about 5 cm (2") piece of Planet Pet Society Chicken Stick and pushed it to the bottom of the cup so that it got stuck in there. Then I put Kong toys or tennis balls on the top and pushed them deep as possible in to the cones.
 
 It took Miki about two minutes to get all the treats out from those three cups.
 
