--- a/en/activation/_posts/2015-07-20-cones.md
+++ b/en/activation/_posts/2015-07-20-cones.md
@@ -7,7 +7,7 @@ image:
   thumb:
 ---
 
-For the honor of late summer, I did these cones inspired by ice cream cones :) for Miki.
+For the honor of late summer, I did these cones inspired by ice cream cones for Miki :)
 
 I used carton coffee cups for this game and I put one treat in each cup. I cut about 5 cm (2") piece of Planet Pet Society Chicken Stick and pushed it to the bottom of the cup so that it got stuck in there. Then I put Kong toys or tennis balls on the top and pushed them deep as possible in to the cones.
 
