--- a/en/activation/_posts/2015-07-20-dvd-case.md
+++ b/en/activation/_posts/2015-07-20-dvd-case.md
@@ -3,13 +3,16 @@ title: "DVD case"
 layout: article
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/oyKQrnw9HGfHaJGDdPVMF0YFL-N30PprGsnxSur-xdY=w245-h163-no
+  teaser: https://lh3.googleusercontent.com/oyKQrnw9HGfHaJGDdPVMF0YFL-N30PprGsnxSur-xdY=w245
   thumb:
 ---
 
 For this one you only need an empty DVD case and some treats that fits in the case. I put some grated cheese in it. Also I cut off the plastic cover holder, because it seemed sharp (Miki could have cut his mouth with it). 
+This took Miki about one and a half minutes to get the case open.
 
-This took Miki about one and a half minutes to get the case open. If this is as easy for your dog, you could put some masking tape around it, as I have planned to do in the next time.
+If this is as easy for your dog, you could put some masking tape around it. When I tape the case before giving it to Miki, it takes Miki about three minutes to get the treats out.
+
+Always remember to supervise your dog when you give these assignments to him. This DVD case lasted four sessions and it broke down on the fifth session. Luckily Miki knows that the plastic pieces are inedible, but accidents can always happen. So do not leave your dog alone with toys or games that can fall apart.
 
 ---
 
@@ -18,3 +21,9 @@ This took Miki about one and a half minutes to get the case open. If this is as 
 [![](https://lh3.googleusercontent.com/jUf_8RjsgeyfyoBiS054hGbuxgaY22-tWMoIgEtIjtM=w800)](https://lh3.googleusercontent.com/jUf_8RjsgeyfyoBiS054hGbuxgaY22-tWMoIgEtIjtM=s0)
 
 [![](https://lh3.googleusercontent.com/7aBAweTHm4bBq0BqAkyRVh7YLUmgSs-DAvrwDrctGA4=w800)](https://lh3.googleusercontent.com/7aBAweTHm4bBq0BqAkyRVh7YLUmgSs-DAvrwDrctGA4=s0)
+
+[![](https://lh3.googleusercontent.com/P9nqt7idslPpemDUEsSFofytlMF7KK4Rp_I_KnqMRMI=w800)](https://lh3.googleusercontent.com/P9nqt7idslPpemDUEsSFofytlMF7KK4Rp_I_KnqMRMI=s0)
+
+[![](https://lh3.googleusercontent.com/EOW1Da4eNjT4H8Z7wcwIAS3rZa9gE4iweEh78dPOIko=w800)](https://lh3.googleusercontent.com/EOW1Da4eNjT4H8Z7wcwIAS3rZa9gE4iweEh78dPOIko=s0)
+
+[![](https://lh3.googleusercontent.com/wpw7aubSo4PCxUZGWbn1Jw8_AZteZ-DFr1yfVW5iM0w=w800)](https://lh3.googleusercontent.com/wpw7aubSo4PCxUZGWbn1Jw8_AZteZ-DFr1yfVW5iM0w=s0)
