--- a/en/activation/_posts/2015-07-20-dvd-case.md
+++ b/en/activation/_posts/2015-07-20-dvd-case.md
@@ -7,8 +7,9 @@ image:
   thumb:
 ---
 
-For this one you only need an empty DVD case and some treats that fits in the case. I put some grated cheese in it. Also I cut off the plastic cover holder, because it seemed sharp (Miki could have cut his mouth with it). 
-This took Miki about one and a half minutes to get the case open.
+For this one you only need an empty DVD case and some treats that fits in the case. I have put some grated cheese or just kibbles in it. I also cut off the plastic cover holder, because it seemed sharp (Miki could have cut his mouth with it). 
+
+It took Miki about one and a half minutes to get the case open.
 
 If this is as easy for your dog, you could put some masking tape around it. When I tape the case before giving it to Miki, it takes Miki about three minutes to get the treats out.
 
