--- a/aktivointi/_posts/2015-07-11-totterot.md
+++ b/aktivointi/_posts/2015-07-11-totterot.md
@@ -9,9 +9,11 @@ image:
 
 Loppukesän kunniaksi tein Mikille tällaiset jäätelötötterön näköiset Kong- ja tennispallotötteröt :)
 
-Käytin tässä kertakäyttöisiä kahvimukeja ja laitoin jokaisen kupin pohjalle yhden herkkupalan. Leikkasin Planet Petin kanatikusta puolisenttiä pidemmän tikun, kuin mitä oli tuon mukin pohjan halkaisija, jotta herkkutikku jäi kiinni tuonne pohjalle. Siihen päälle  sitten laitoin joko Kongin tai tennispallon esteeksi. Painoin vielä tuon tennispallon tai Kongin niin syvälle kuin se meni.
+Käytin tässä kertakäyttöisiä kahvimukeja ja laitoin jokaisen kupin pohjalle yhden herkkupalan. Leikkasin Planet Petin kanatikusta puolisenttiä pidemmän tikun, kuin mitä oli tuon mukin pohjan halkaisija, jotta herkkutikku jäi kiinni tuonne pohjalle. Siihen päälle sitten laitoin joko Kongin tai tennispallon esteeksi. Painoin vielä tuon tennispallon tai Kongin niin syvälle kuin se meni.
 
 Mikiltä kesti noin kaksi minuuttia saada kaikki herkut ulos noista kolmesta kupista.
+
+Kokeilin tätä myös niin, että laitoin mukeihin esteiksi nuo Kongit, mutta laitoin herkkuja sekä tuonne mukeihin että Kongien sisälle. Mikistä oli super kivaa, kun herkkuja tuli joka paikasta :)
 
 ---
 
