--- a/en/activation/_posts/2015-07-20-yarn-box.md
+++ b/en/activation/_posts/2015-07-20-yarn-box.md
@@ -17,6 +17,8 @@ It took Miki about 2 to 3 minutes to find a small handful of treats.
 
 It took me about ten minutes to craft this box, but the box is reusable and it seems to be durable too.
 
+You can do a similar game with less effort, by using a plastic basket which already has holes in it. I used an old t-shirt for this one which I had cut into a long string and I wired it through the basket. Look at the last pictures. 
+
 ---
 
 [![](https://lh3.googleusercontent.com/kOYI4NjllwrYCg5ZpXrxr4zQSY310Rww8s81_iPw-ao=w800)](https://lh3.googleusercontent.com/kOYI4NjllwrYCg5ZpXrxr4zQSY310Rww8s81_iPw-ao=s0)
@@ -28,3 +30,9 @@ It took me about ten minutes to craft this box, but the box is reusable and it s
 [![](https://lh3.googleusercontent.com/lLl-vxGnX1RNH0Qsyx-MOFXNLywsHqjfV78isIWayAQ=w800)](https://lh3.googleusercontent.com/lLl-vxGnX1RNH0Qsyx-MOFXNLywsHqjfV78isIWayAQ=s0)
 
 [![](https://lh3.googleusercontent.com/klm3Mqa88Ocpmg1N3fjRoKBb-66kVDwcrbJBIqZ4Db0=w800)](https://lh3.googleusercontent.com/klm3Mqa88Ocpmg1N3fjRoKBb-66kVDwcrbJBIqZ4Db0=s0)
+
+[![](https://lh3.googleusercontent.com/zzhAaNIqDaCxiOlOda7htrWXkpGpd-5ww3lNDkgU6kg=w800)](https://lh3.googleusercontent.com/zzhAaNIqDaCxiOlOda7htrWXkpGpd-5ww3lNDkgU6kg=s0)
+
+[![](https://lh3.googleusercontent.com/3GM8v2rZRYJ0AicTKSu8KarWvKPwQBq_fD8LfKjQmDA=w800)](https://lh3.googleusercontent.com/3GM8v2rZRYJ0AicTKSu8KarWvKPwQBq_fD8LfKjQmDA=s0)
+
+[![](https://lh3.googleusercontent.com/o5jZNTP_QgHwn22KKdLmaX_GCruddM1E7R0PU7X921E=w800)](https://lh3.googleusercontent.com/o5jZNTP_QgHwn22KKdLmaX_GCruddM1E7R0PU7X921E=s0)
