--- a/en/activation/_posts/2015-07-20-towels.md
+++ b/en/activation/_posts/2015-07-20-towels.md
@@ -19,6 +19,8 @@ I have tried some soft treats (like a wiener) for this one. But when I put soft 
 
 It takes 10 to 15 minutes for Miki to open the double knotted towel.
 
+Sometimes I put the towel inside a cardboard box, so that Miki first needs to get it out from the box. And sometimes I put a plastic basket or a laundry basket face down on top of the towel, so Miki first needs to move the basket out of the way.
+
 ---
 
 [![](https://lh3.googleusercontent.com/EUGEMklxbux158kHddEHOsDAixgJ8wfKUzdZzNDo2Cg=w800)](https://lh3.googleusercontent.com/EUGEMklxbux158kHddEHOsDAixgJ8wfKUzdZzNDo2Cg=s0)
@@ -30,3 +32,13 @@ It takes 10 to 15 minutes for Miki to open the double knotted towel.
 [![](https://lh3.googleusercontent.com/EIUowJnFzROpWme2aqztpsmWjmPzB_kjyxE2gmmu4yo=w800)](https://lh3.googleusercontent.com/EIUowJnFzROpWme2aqztpsmWjmPzB_kjyxE2gmmu4yo=s0)
 
 [![](https://lh3.googleusercontent.com/i89khDJ-eN2d2FbF5t1xjMfWx8KZrIrFyl9u_LUhrCU=w800)](https://lh3.googleusercontent.com/i89khDJ-eN2d2FbF5t1xjMfWx8KZrIrFyl9u_LUhrCU=s0)
+
+[![](https://lh3.googleusercontent.com/5INXkR8MPsvUOAUdsUe5zoFlY2UtnR-TAv8aYH8Y2FE=w800)](https://lh3.googleusercontent.com/5INXkR8MPsvUOAUdsUe5zoFlY2UtnR-TAv8aYH8Y2FE=s0)
+
+[![](https://lh3.googleusercontent.com/D5IAqsXZz44y7ZymZ-ktFRU8g-FSYLzb-pK0EuZAtdQ=w800)](https://lh3.googleusercontent.com/D5IAqsXZz44y7ZymZ-ktFRU8g-FSYLzb-pK0EuZAtdQ=s0)
+
+[![](https://lh3.googleusercontent.com/fzZb3_GoY0BztcEnN4Kp1-qBlbvI_Ar6pSxf28xIiPQ=w800)](https://lh3.googleusercontent.com/fzZb3_GoY0BztcEnN4Kp1-qBlbvI_Ar6pSxf28xIiPQ=s0)
+
+[![](https://lh3.googleusercontent.com/yD-6KYJS0pRp3eI6TGMpxkpUIG1RpANQx27IEuzs6RY=w800)](https://lh3.googleusercontent.com/yD-6KYJS0pRp3eI6TGMpxkpUIG1RpANQx27IEuzs6RY=s0)
+
+[![](https://lh3.googleusercontent.com/BS6Bjp5OMILH4QZvz_I8XCYPS3ykWok4wqRuiVEr3Jc=w800)](https://lh3.googleusercontent.com/BS6Bjp5OMILH4QZvz_I8XCYPS3ykWok4wqRuiVEr3Jc=s0)
