--- a/en/activation/_posts/2015-07-20-trivet.md
+++ b/en/activation/_posts/2015-07-20-trivet.md
@@ -14,6 +14,8 @@ I put the trivet on the floor and sprinkled some treats in the gaps. That game w
 
 At the third time I wired about 3 meters (10 feet) long string of fabric to it and secured it with knots. I have cut old t-shirts to make these strings, but you can use any fabric like old sheets and towels or yarn. This time it took Miki 1-2 minutes to eat all the treats.
 
+You can make this game harder by laying the trivet in a cardboard box.
+
 ---
 
 [![](https://lh3.googleusercontent.com/ymh9uAzjTVZazzuFwwhIicQDeQj2OBFoeWGIa5qn3YQ=w800)](https://lh3.googleusercontent.com/ymh9uAzjTVZazzuFwwhIicQDeQj2OBFoeWGIa5qn3YQ=s0)
@@ -31,3 +33,9 @@ At the third time I wired about 3 meters (10 feet) long string of fabric to it a
 Yay that was fun!
 
 [![](https://lh3.googleusercontent.com/2MuZEnXfn8LUiVP7C4TRGplQwQP2sXATxA3BFbF-8BM=w800)](https://lh3.googleusercontent.com/2MuZEnXfn8LUiVP7C4TRGplQwQP2sXATxA3BFbF-8BM=s0)
+
+[![](https://lh3.googleusercontent.com/ssvFQVqz20WgSWxo6jSxuriQEtfYPg0hIso-SgiXXpw=w800)](https://lh3.googleusercontent.com/ssvFQVqz20WgSWxo6jSxuriQEtfYPg0hIso-SgiXXpw=ws0)
+
+[![](https://lh3.googleusercontent.com/lM3qc1tF2E06iaXFZL37E9ycG6ZupUBgpsm3k6KfecQ=w800)](https://lh3.googleusercontent.com/lM3qc1tF2E06iaXFZL37E9ycG6ZupUBgpsm3k6KfecQ=s0)
+
+[![](https://lh3.googleusercontent.com/Y3fN71vRPKZT1vR4ZNNyupc41tNR4mdW43U0q8B-yJQ=w800)](https://lh3.googleusercontent.com/Y3fN71vRPKZT1vR4ZNNyupc41tNR4mdW43U0q8B-yJQ=s0)
