--- a/aktivointi/_posts/2015-07-11-ritila.md
+++ b/aktivointi/_posts/2015-07-11-ritila.md
@@ -13,6 +13,8 @@ Asetin siis tämän ritilän lattialle ja ripottelin muutamia nameja sinne väle
 
 Kolmannella kerralla pujottelin noin kolme metriä pitkän, t-paidasta leikatun kangassuikaleen esteeksi ja solmin sen kiinni. Tämä pujoteltu kangas oli sopiva este ja Mikiltä meni noin 1-2 minuuttia kaikkien namien syömiseen.
 
+Tehtävää voi vaikeuttaa lisää laittamalla ritilän pahvilaatikkoon.
+
 ---
 
 [![](https://lh3.googleusercontent.com/ymh9uAzjTVZazzuFwwhIicQDeQj2OBFoeWGIa5qn3YQ=w800)](https://lh3.googleusercontent.com/ymh9uAzjTVZazzuFwwhIicQDeQj2OBFoeWGIa5qn3YQ=s0)
@@ -30,3 +32,9 @@ Kolmannella kerralla pujottelin noin kolme metriä pitkän, t-paidasta leikatun 
 Jei kun oli kivaa!
 
 [![](https://lh3.googleusercontent.com/2MuZEnXfn8LUiVP7C4TRGplQwQP2sXATxA3BFbF-8BM=w800)](https://lh3.googleusercontent.com/2MuZEnXfn8LUiVP7C4TRGplQwQP2sXATxA3BFbF-8BM=s0)
+
+[![](https://lh3.googleusercontent.com/ssvFQVqz20WgSWxo6jSxuriQEtfYPg0hIso-SgiXXpw=w800)](https://lh3.googleusercontent.com/ssvFQVqz20WgSWxo6jSxuriQEtfYPg0hIso-SgiXXpw=ws0)
+
+[![](https://lh3.googleusercontent.com/lM3qc1tF2E06iaXFZL37E9ycG6ZupUBgpsm3k6KfecQ=w800)](https://lh3.googleusercontent.com/lM3qc1tF2E06iaXFZL37E9ycG6ZupUBgpsm3k6KfecQ=s0)
+
+[![](https://lh3.googleusercontent.com/Y3fN71vRPKZT1vR4ZNNyupc41tNR4mdW43U0q8B-yJQ=w800)](https://lh3.googleusercontent.com/Y3fN71vRPKZT1vR4ZNNyupc41tNR4mdW43U0q8B-yJQ=s0)
