--- a/en/activation/_posts/2015-07-20-yarn-box.md
+++ b/en/activation/_posts/2015-07-20-yarn-box.md
@@ -17,7 +17,7 @@ It took Miki about 2 to 3 minutes to find a small handful of treats.
 
 It took me about ten minutes to craft this box, but the box is reusable and it seems to be durable too.
 
-You can do a similar game with less effort, by using a plastic basket which already has holes in it. I used an old t-shirt for this one which I had cut into a long string and I wired it through the basket. Look at the last pictures. 
+You can do a similar game with less effort, by using a plastic basket which already has holes in it. I used an old t-shirt for this one which I had cut into a long string and I wired it through the basket. Look at the last pictures. We also played this game with an ice cube tray. I placed the ice cube tray on the bottom of the basket and then I sprinkled some kibbles on top of it.
 
 ---
 
@@ -36,3 +36,5 @@ You can do a similar game with less effort, by using a plastic basket which alre
 [![](https://lh3.googleusercontent.com/3GM8v2rZRYJ0AicTKSu8KarWvKPwQBq_fD8LfKjQmDA=w800)](https://lh3.googleusercontent.com/3GM8v2rZRYJ0AicTKSu8KarWvKPwQBq_fD8LfKjQmDA=s0)
 
 [![](https://lh3.googleusercontent.com/o5jZNTP_QgHwn22KKdLmaX_GCruddM1E7R0PU7X921E=w800)](https://lh3.googleusercontent.com/o5jZNTP_QgHwn22KKdLmaX_GCruddM1E7R0PU7X921E=s0)
+
+[![](https://lh3.googleusercontent.com/_zfAvkkTd3k-tvtHgvCJEC-j0t5Con0DxuMD7i7FE-m-GzAV1f9lVypNt8ZeRo0NpX1lyvLmAJK04raHSF1WOiqYnTqT4kXz-bftMNRRPgJebCSm-AxHQY6RxZxQTy9-4Q_W9KJFmdR2U-p93if80-NE8QJc5Dkn-tvC6h7OWXqVJ4Zn8lLaMFT3XiSMdyocSXcsC6zAd4YTPdrLAdGO2jzIRXrbyJBeSe5ILEzfEs9XX33IOOMO71geXOZRSmykEkZtoEwTQzxmddHo0paRA4hciheUcXao5S09Rqtx1boyusuLA0S098jSAYWQFGICyP3yagGb0kraXvQHQ_TZleI1mxgtlqBc_YmvXeykla11VrcZk2jgeNwCk1GV8TbrW0tkSO0-v187_ohOz9upaqpjkz3rVMh5QMNgGbdVDO_nBcHhvuiu8fwv1Wrb70oE4BczvVLOVmOChsJvtsrLkFJpmZKP7poX4_5EG7LtclH016SmzxFPq3f-fumXHLZx1nGWVlGMHJZ_7S_-ZaL_rsFbH4i4wXeroc42rKPlCQc=w800)](https://lh3.googleusercontent.com/_zfAvkkTd3k-tvtHgvCJEC-j0t5Con0DxuMD7i7FE-m-GzAV1f9lVypNt8ZeRo0NpX1lyvLmAJK04raHSF1WOiqYnTqT4kXz-bftMNRRPgJebCSm-AxHQY6RxZxQTy9-4Q_W9KJFmdR2U-p93if80-NE8QJc5Dkn-tvC6h7OWXqVJ4Zn8lLaMFT3XiSMdyocSXcsC6zAd4YTPdrLAdGO2jzIRXrbyJBeSe5ILEzfEs9XX33IOOMO71geXOZRSmykEkZtoEwTQzxmddHo0paRA4hciheUcXao5S09Rqtx1boyusuLA0S098jSAYWQFGICyP3yagGb0kraXvQHQ_TZleI1mxgtlqBc_YmvXeykla11VrcZk2jgeNwCk1GV8TbrW0tkSO0-v187_ohOz9upaqpjkz3rVMh5QMNgGbdVDO_nBcHhvuiu8fwv1Wrb70oE4BczvVLOVmOChsJvtsrLkFJpmZKP7poX4_5EG7LtclH016SmzxFPq3f-fumXHLZx1nGWVlGMHJZ_7S_-ZaL_rsFbH4i4wXeroc42rKPlCQc=s0)
