--- a/en/activation/_posts/2015-07-20-tug-of-war.md
+++ b/en/activation/_posts/2015-07-20-tug-of-war.md
@@ -21,7 +21,7 @@ I tied a wooden block as a handle to one end of the rope and then I tied a piece
 
 Then I just pushed the treat part of the rope through the lid. It took Miki only about 15 seconds to figure this game out.
 
-In the pictures below you can see the holes made for the zip ties, the slashes on the lid and the rope with a handle and a treat.  If you have an own yard, you can also hang this tube from a tree branch or from a railing. And you can also do a similar game horizontally, by holding the tube on the floor. 
+In the pictures below you can see the holes made for the zip ties, the slashes on the lid and the rope with a handle and a treat. If you have an own yard, you can also hang this tube from a tree branch or from a railing. 
 
 ---
 
