--- a/en/activation/_posts/2015-07-20-lids.md
+++ b/en/activation/_posts/2015-07-20-lids.md
@@ -11,11 +11,13 @@ You can use any lids for this game. Small and light weighted lids are usually th
 
 When the lids are placed on the carpet, they are easier for the dog to lift and turn. When they are placed on the hard floor, the game becomes harder.
 
-When Miki was younger, and we hadn't play much of these brain games with him, I gave a task to Miki to find a treat under a kettle lid. At that time the task was way too hard for Miki, and Miki hasn't even try to get the treat out of kettle lids ever since (though he'd probably master the game nowadays).
+When Miki was younger and we hadn't play much of these brain games with him, I gave a task to Miki to find a treat under a kettle lid. At that time the task was way too hard for Miki, and Miki hasn't even try the kettle lids ever since (though he'd probably master the game nowadays).
 
 So, always remember to start with the easier games and gradually make the games harder.
 
-Here are some pictures of the lids I've give for Miki to play. The single tasks are easy for Miki and Miki usually gets the treats out in seconds. With larger or heavier lids it usually takes a bit longer. When I put two treats under a plastic container's lid, it took Miki about a minute to get the treats out, because Miki couldn't lift the slippery lid off the carpet.
+Here are some pictures of the lids I've give for Miki to play. The single tasks are easy for Miki and Miki usually gets the treats out in seconds. With larger or heavier lids it usually takes a bit longer.
+
+When I put two treats under a plastic container's lid, it took Miki about a minute to get the treats out, because Miki couldn't lift the slippery lid off the carpet.
 
 ---
 
