--- a/aktivointi/_posts/2015-07-11-totterot.md
+++ b/aktivointi/_posts/2015-07-11-totterot.md
@@ -15,6 +15,8 @@ Mikiltä kesti noin kaksi minuuttia saada kaikki herkut ulos noista kolmesta kup
 
 Kokeilin tätä myös niin, että laitoin mukeihin esteiksi nuo Kongit, mutta laitoin herkkuja sekä tuonne mukeihin että Kongien sisälle. Mikistä oli super kivaa, kun herkkuja tuli joka paikasta :)
 
+Myöhemmin vaikeutin tätä tehtävää tekemällä tuplatötteröitä. Ensin laitoin paperimukiin nappuloita, siihen päälle muovimukin johon myös laitoin nappuloita ja viimeiseksi laitoin päälle Kongin tai tennispallon.
+
 ---
 
 [![](https://lh3.googleusercontent.com/7FRpvZKfA2FZdEZpDv8JTKGYhmnbMw8vGgiWCwndYlQ=w800)](https://lh3.googleusercontent.com/7FRpvZKfA2FZdEZpDv8JTKGYhmnbMw8vGgiWCwndYlQ=s0)
@@ -38,3 +40,7 @@ Kokeilin tätä myös niin, että laitoin mukeihin esteiksi nuo Kongit, mutta la
 [![](https://lh3.googleusercontent.com/DUWyMzDQf_1eaxVivZtyqCd4-HhTs8YxCayIey7uWLDZHKDu_vjvSKEtiBbM0Ll5Q9zSKHjEKINNVKYSBBI5uWzQkPtxjPlQRSq9Bce6ceApTc0x8pug4edfgl9J6jVQSW3_Eh4XlNIeF0Ve6GR9Qe6G1xbZTHtnGkRcU8VVC8HHAP7RZLMaK_B7xVQdKPa8K1oP2btNEfZtOb6EDTRHpbIn6CdvWkNA-c5L5SzpixkCOaT0MMqFXKDOZnaL9YIBaQHZfVXSJgZB0CIIWW4eH2Apt_aG5yyaXG2bFz-Qi2odY3hj_aSw9UkLnlY447DicNLi-bwOUGtccPe-cJrEqBrpTKRgUzfEGI-kh2iESyYjLlh8dAqJ_D_JdCiJFST_aPRXfrVAeuq51ZBWSlzCW0-No_NTUYnzrCzGhu_w0MjPdSgi29MN8F6Q8xyW5YCzMJGNBe6uHYLsG2ZEiivg40cfLKAS58s5bIj5LNnx4wZ9hnFENM_d9N_vtf4C7d0RUx8H9guakNSOugQ_OMqu6BB6FEkQUIXL1LgDO_hMn8U=w800)](https://lh3.googleusercontent.com/DUWyMzDQf_1eaxVivZtyqCd4-HhTs8YxCayIey7uWLDZHKDu_vjvSKEtiBbM0Ll5Q9zSKHjEKINNVKYSBBI5uWzQkPtxjPlQRSq9Bce6ceApTc0x8pug4edfgl9J6jVQSW3_Eh4XlNIeF0Ve6GR9Qe6G1xbZTHtnGkRcU8VVC8HHAP7RZLMaK_B7xVQdKPa8K1oP2btNEfZtOb6EDTRHpbIn6CdvWkNA-c5L5SzpixkCOaT0MMqFXKDOZnaL9YIBaQHZfVXSJgZB0CIIWW4eH2Apt_aG5yyaXG2bFz-Qi2odY3hj_aSw9UkLnlY447DicNLi-bwOUGtccPe-cJrEqBrpTKRgUzfEGI-kh2iESyYjLlh8dAqJ_D_JdCiJFST_aPRXfrVAeuq51ZBWSlzCW0-No_NTUYnzrCzGhu_w0MjPdSgi29MN8F6Q8xyW5YCzMJGNBe6uHYLsG2ZEiivg40cfLKAS58s5bIj5LNnx4wZ9hnFENM_d9N_vtf4C7d0RUx8H9guakNSOugQ_OMqu6BB6FEkQUIXL1LgDO_hMn8U=s0)
 
 [![](https://lh3.googleusercontent.com/buuJCHe4EddVm7ZpGoLKHa4Hbs8EKu2C3F9MSQ3NClaTUWA63kLziLWr4W4uTe5zPtIr-DOanSdvt4TsbZHSo32iHXsG3JecjZDn5uBNPG4TIkUFtWrmr_qV8fxNqRJaLEwcEohry7lROUHNBPGcqzIlm25ZfLTzKDA79sAsPrJ6wmE8vZT4eWI60jsba1KTcG2y9HLcHj1joSeU1GowmqW0a3zIurmzIjmxidfoaNQVw2ymb1BB6lCEzThZQuQmfbYOXK3DTmif-AbDUmLM7uAV3NPdIseEeyHxOMZ7pIobnlJjVM2R8S8wee7J9V5_sMfnQDbSVp6T7nioTFo-YzSOIFRL0pzMf0Rm7UWIa1U_wdno9YuoUv0uiyui9vhbNrks0MFO5wy0N-XRIuUllrzO5RwpEfRbDzOJNVYYeu2UR6i0HDbBak0C3vuMYSRUFTxLzNDuQVOxyW0iNEuYQI9K_JOaBsfiO0bPVeMcV9x5rYWORRdHiZyoRmXvPmFvN1HSEAp9V_lW5i4noYw7dv01e0ieziyF6LBjlaAQmUs=w800)](https://lh3.googleusercontent.com/buuJCHe4EddVm7ZpGoLKHa4Hbs8EKu2C3F9MSQ3NClaTUWA63kLziLWr4W4uTe5zPtIr-DOanSdvt4TsbZHSo32iHXsG3JecjZDn5uBNPG4TIkUFtWrmr_qV8fxNqRJaLEwcEohry7lROUHNBPGcqzIlm25ZfLTzKDA79sAsPrJ6wmE8vZT4eWI60jsba1KTcG2y9HLcHj1joSeU1GowmqW0a3zIurmzIjmxidfoaNQVw2ymb1BB6lCEzThZQuQmfbYOXK3DTmif-AbDUmLM7uAV3NPdIseEeyHxOMZ7pIobnlJjVM2R8S8wee7J9V5_sMfnQDbSVp6T7nioTFo-YzSOIFRL0pzMf0Rm7UWIa1U_wdno9YuoUv0uiyui9vhbNrks0MFO5wy0N-XRIuUllrzO5RwpEfRbDzOJNVYYeu2UR6i0HDbBak0C3vuMYSRUFTxLzNDuQVOxyW0iNEuYQI9K_JOaBsfiO0bPVeMcV9x5rYWORRdHiZyoRmXvPmFvN1HSEAp9V_lW5i4noYw7dv01e0ieziyF6LBjlaAQmUs=s0)
+
+[![](https://lh3.googleusercontent.com/89kVogGwKhegoGRvOL2ckrw9WxmyA7kpaF4lnbq7E70E1v-ovZQtVjJmjg2sQm7ecuGxGHTM6T_ZOXPoDzESEybC-dF6O0edTk3F1s-qF38zifppt9bDIlqM3X0ZzThwUj_kAATXg4A5adChqDSqvpmH0pUoeYAyoTCbBDhY2xILc4wN5YXGBDNDWONXgztSoriU9NJDN1P_e1F_OBRLNLa8d5r4e9swuvc8CFVgUSaybtuVFtrqDtaNENjxHNioEukGqBwUHodowYBFKUCiPRVBYoZ_iS2iYLS1RRc8DITH80fXzDMkHWOD_m9edrbaLnBPxK8avxvis4DBr5L5knBXNy8KPTpsEedl20C5NpGfBICvBIJKtkHVCJIi5Cp-TARbaW6yG-dBYG_ziCwwQoQtzJr2pv7jQraYsJaAPhyX67ZZJCJrUu_6hpwaoYUlG_zRYS5imqoo4V_lSC6qDY6R6ktoL_JkvcRf-jZHwIFox1Bl7fJBb0x6PPVQumWsOi2_3VZpnR0df0AKGKjJClstSks55-iT0O65qSu9LMs=w800)](https://lh3.googleusercontent.com/89kVogGwKhegoGRvOL2ckrw9WxmyA7kpaF4lnbq7E70E1v-ovZQtVjJmjg2sQm7ecuGxGHTM6T_ZOXPoDzESEybC-dF6O0edTk3F1s-qF38zifppt9bDIlqM3X0ZzThwUj_kAATXg4A5adChqDSqvpmH0pUoeYAyoTCbBDhY2xILc4wN5YXGBDNDWONXgztSoriU9NJDN1P_e1F_OBRLNLa8d5r4e9swuvc8CFVgUSaybtuVFtrqDtaNENjxHNioEukGqBwUHodowYBFKUCiPRVBYoZ_iS2iYLS1RRc8DITH80fXzDMkHWOD_m9edrbaLnBPxK8avxvis4DBr5L5knBXNy8KPTpsEedl20C5NpGfBICvBIJKtkHVCJIi5Cp-TARbaW6yG-dBYG_ziCwwQoQtzJr2pv7jQraYsJaAPhyX67ZZJCJrUu_6hpwaoYUlG_zRYS5imqoo4V_lSC6qDY6R6ktoL_JkvcRf-jZHwIFox1Bl7fJBb0x6PPVQumWsOi2_3VZpnR0df0AKGKjJClstSks55-iT0O65qSu9LMs=s0)
+
+[![](https://lh3.googleusercontent.com/R_zEmJLMvAqSjI7vuCPSv1RL28l6N194sutUao6cI_P7_6SB6Nx37OKDJtg1Tk89z4oaGRzXExwtPapL6tLuWC747Mdh6w7e9Z1F9KaQTwzIgb8mVZ2fz2zcHF1-ua6aN_v-UVR95AJ35Pzlyi2girVWcYT9BJd9uhRFMOoD9xytT8lBYAJjLin4Vo1CEKT4K5K98Uibn24yby9MLXi0VdZzl5vF0qrJBIIFiGuaXAnXlDKfOB9BZ783k5zSQuy71HwCobaA6DF9thdwDzWdcLt4bd8xZolORDUQpFNCbvkQIIAUKU6v5Gvr0z2OLnv1MRc19N0V986kBlbIZye6sUNVeQhM10WGnFfVSHtsjnM3x5ZZ2jsU-LxtBUhaRLxHST12Toy__7TLgVET2CLxZF_g-vMVfSDHRMipV2MAVIJ_HRXs201d24eXZejARAZAt2Dj72q8BupcVKukO0ApnbfDMa3ESYH3Y1hWrey6IiL_rkMGOrBnxF2KgfRDPIQbfQTo_aXNTjbQPR2fGrkkEdo1ZMX2fRAiHrIJjm4hJLo=w800)](https://lh3.googleusercontent.com/R_zEmJLMvAqSjI7vuCPSv1RL28l6N194sutUao6cI_P7_6SB6Nx37OKDJtg1Tk89z4oaGRzXExwtPapL6tLuWC747Mdh6w7e9Z1F9KaQTwzIgb8mVZ2fz2zcHF1-ua6aN_v-UVR95AJ35Pzlyi2girVWcYT9BJd9uhRFMOoD9xytT8lBYAJjLin4Vo1CEKT4K5K98Uibn24yby9MLXi0VdZzl5vF0qrJBIIFiGuaXAnXlDKfOB9BZ783k5zSQuy71HwCobaA6DF9thdwDzWdcLt4bd8xZolORDUQpFNCbvkQIIAUKU6v5Gvr0z2OLnv1MRc19N0V986kBlbIZye6sUNVeQhM10WGnFfVSHtsjnM3x5ZZ2jsU-LxtBUhaRLxHST12Toy__7TLgVET2CLxZF_g-vMVfSDHRMipV2MAVIJ_HRXs201d24eXZejARAZAt2Dj72q8BupcVKukO0ApnbfDMa3ESYH3Y1hWrey6IiL_rkMGOrBnxF2KgfRDPIQbfQTo_aXNTjbQPR2fGrkkEdo1ZMX2fRAiHrIJjm4hJLo=s0)
