--- a/en/activation/_posts/2015-07-20-corals.md
+++ b/en/activation/_posts/2015-07-20-corals.md
@@ -23,7 +23,7 @@ We started with this easy game. I set the corals on the floor and put some small
 
 ##### Game 2: Corals in a plastic container
 
-I put all 45 corals I made in a plaxtic container and put some small treats in the gaps. At some point Miki pushed the container over so that he could find the treats faster :D
+I put all 45 corals in a plastic container and then I put some small treats in the gaps. At some point Miki pushed the container over so that he could find the treats faster :D
 
 [![](https://lh3.googleusercontent.com/30oIX70_Jpug26M1cEbvvLdZJK3MWkddXxTeLgccwqEd-u_ghawwm3lUZl7gwsjPm2fRAomIImkq4oO6MeGcJZhLJJFbdeBSiRmdy6MQEavm9A7IOYGN15Xe-45q8klOM8nUjH201QHkZHMXnbKXI_9edZND9iW_g10oV9c9zVXCN5OcPRsVNLhaa71ohWAr_sdwKQ7X1C6kp3ci7JWvxm9uC51Evv5tEYecWj-upKEeDbu99kyvxuGROz3x7clnAdmY7bF-TtGGJzSHIPxkkH1BGJ2HAjYj2eVALOJ5acQIeuTBiVFVEoX0HwHcZqdgOS0JZLGH1EubkGsXYmfxNRxBfFCBemQ5NAXrM2wUEIqTZw68a8AAYGWkMhzwRfmJNviLPiWLibpebf0cD_RpRmWWPpi0bHtd0rWkgVSCN8MAYQVLfyW5auCRhpHuQVuuu3jtw8oOPtATOd44upmuGT1JsWLxFmfSz6gYn9MwYE8g6AYJ_Db6TxgKEIuPYFV4vhhXvL-Tci7o7zEw_Hrrl25e3RmFV7Vx6qUMkCosn4HKYI_LQxTg-TdGsVFg1xZUI992=w800)](https://lh3.googleusercontent.com/30oIX70_Jpug26M1cEbvvLdZJK3MWkddXxTeLgccwqEd-u_ghawwm3lUZl7gwsjPm2fRAomIImkq4oO6MeGcJZhLJJFbdeBSiRmdy6MQEavm9A7IOYGN15Xe-45q8klOM8nUjH201QHkZHMXnbKXI_9edZND9iW_g10oV9c9zVXCN5OcPRsVNLhaa71ohWAr_sdwKQ7X1C6kp3ci7JWvxm9uC51Evv5tEYecWj-upKEeDbu99kyvxuGROz3x7clnAdmY7bF-TtGGJzSHIPxkkH1BGJ2HAjYj2eVALOJ5acQIeuTBiVFVEoX0HwHcZqdgOS0JZLGH1EubkGsXYmfxNRxBfFCBemQ5NAXrM2wUEIqTZw68a8AAYGWkMhzwRfmJNviLPiWLibpebf0cD_RpRmWWPpi0bHtd0rWkgVSCN8MAYQVLfyW5auCRhpHuQVuuu3jtw8oOPtATOd44upmuGT1JsWLxFmfSz6gYn9MwYE8g6AYJ_Db6TxgKEIuPYFV4vhhXvL-Tci7o7zEw_Hrrl25e3RmFV7Vx6qUMkCosn4HKYI_LQxTg-TdGsVFg1xZUI992=s0)
 
@@ -49,7 +49,7 @@ I put one small treat on the bottom of each cup and then I put the corals on top
 
 ##### Game 4: Giant coral
 
-I wired the corals with yarn and a needle into two long snakes and then I tied them together to make one giant coral. Then I hide some kibbles on the gaps for Miki to find.
+I wired the corals with yarn and a needle into two long snakes and then I tied them together to make one giant coral. Then I hide some kibbles in the gaps for Miki to find.
 
 This game was the most challenging. Not that it was hard but rather the most time consuming.
 
