--- a/en/activation/_posts/2015-07-20-ball-pool.md
+++ b/en/activation/_posts/2015-07-20-ball-pool.md
@@ -13,6 +13,8 @@ I filled less than 100 balloons with air by using a bicycle pump and put them in
 
 Miki loved these balloons so much that he offered me the meercat trick as a compensation in order to get one of those balloons to play with, when I started to fill them :)
 
+Later on we got a chance to try this with real ball pool balls. Miki seemed to love them as much as the balloons.
+
 ---
 
 [![](https://lh3.googleusercontent.com/7tjtfYkLseac50FOmWfPWegqeprOrYdUMzLMn7NV-dE=w800)](https://lh3.googleusercontent.com/7tjtfYkLseac50FOmWfPWegqeprOrYdUMzLMn7NV-dE=s0)
@@ -24,6 +26,10 @@ Miki loved these balloons so much that he offered me the meercat trick as a comp
 [![](https://lh3.googleusercontent.com/_Luen2SgHWmJCWNuxpaGuezV_fUOLaMpX1fakVvFeXs=w800)](https://lh3.googleusercontent.com/_Luen2SgHWmJCWNuxpaGuezV_fUOLaMpX1fakVvFeXs=s0)
 
 [![](https://lh3.googleusercontent.com/eT2HoSHIk9_qRnpAWZ2Kxg3XCAJJla9gVxqoJ0ntK-w=w800)](https://lh3.googleusercontent.com/eT2HoSHIk9_qRnpAWZ2Kxg3XCAJJla9gVxqoJ0ntK-w=s0)
+
+[![](https://lh3.googleusercontent.com/9rOlFS0h35Kzo20sROle0dVT8Qe-f3pjHNZ9I6uJjhCHXzTQZTN3ZS30imwJKGMw2t4boi25YaqAZxPpCv3mFFYfy2DYlOKGxrHVQKqq0gElHTW560hPXfsOkGgK9X06-5DNsdY7QQwm_0bQuk-Y-tjV9AhGngq7BVofPC6ytE-pz1DCQkMWJGUzywhXB_bdjwltdN7GXuDsabbH0a5IUxk9csvR0NJ7PKX2wM3PqbgKo1yzL3g5Z5gTTXpcUwxWOv6j69OsxtHhr4fISMPH4cRcyT2oQOI4-r1fpvMZJeMjPgkT3bkAUySYbbROHUHuIsahQrG489iQsAEIXiQSL6n5dEDoefUNCW9Z8MfGd7FFTQTyrozkVkgUYphoVVf54ba9UVnWDCiftMcve0Gk57WD7oXLrR1E50e5y1k01V25aS5znLRMgM_OFCTwKNFWtzAU2bxgPuULoGlw37DiMjM-Ux4Z1S8Xy-h-2Dr7VQlxi-XCx-Iz_tWgafdbQ3brKcrplRX-RNaCb1HwSTVA4XUpwpzOHAHnpx8-FTFNiRqiIlRgJjbA4wTc6t2nfuUEk04q=w800)](https://lh3.googleusercontent.com/9rOlFS0h35Kzo20sROle0dVT8Qe-f3pjHNZ9I6uJjhCHXzTQZTN3ZS30imwJKGMw2t4boi25YaqAZxPpCv3mFFYfy2DYlOKGxrHVQKqq0gElHTW560hPXfsOkGgK9X06-5DNsdY7QQwm_0bQuk-Y-tjV9AhGngq7BVofPC6ytE-pz1DCQkMWJGUzywhXB_bdjwltdN7GXuDsabbH0a5IUxk9csvR0NJ7PKX2wM3PqbgKo1yzL3g5Z5gTTXpcUwxWOv6j69OsxtHhr4fISMPH4cRcyT2oQOI4-r1fpvMZJeMjPgkT3bkAUySYbbROHUHuIsahQrG489iQsAEIXiQSL6n5dEDoefUNCW9Z8MfGd7FFTQTyrozkVkgUYphoVVf54ba9UVnWDCiftMcve0Gk57WD7oXLrR1E50e5y1k01V25aS5znLRMgM_OFCTwKNFWtzAU2bxgPuULoGlw37DiMjM-Ux4Z1S8Xy-h-2Dr7VQlxi-XCx-Iz_tWgafdbQ3brKcrplRX-RNaCb1HwSTVA4XUpwpzOHAHnpx8-FTFNiRqiIlRgJjbA4wTc6t2nfuUEk04q=s0)
+
+[![](https://lh3.googleusercontent.com/yJpZHKigLjiHciZgsGumOmRyhSKKEYM9kZfO5j2b-REwwRUS3pUqPXmNN8MOddHXI3N0Y3ToTj5qj2gi988GOYjONvuJaKe5P-z9hlDGQJ45WC8SjJi6cZduefF_xWVMybmoksg4QeCvVQehK3FAE7LKUygy4ww-dEWfYKlYbOnjNAxQo0ElMjHUnN-p8uug52EXJTRvgj6JsZszP5YmAynzxcC4nuWcsXinKz6C2oyRLMwU-j5Sw-5Xu9PYnoeI4DWGqtwJ-c4zobmkWxBI1DXmK0MWDr300_1nA86eAtbpo-4Zgrm4FO-oqgsVb6zj1OzEjPBfXuuGoT-oHRpqFwNWPqu1ArP9JPufUPQsiOf67U1k6gdYH7sCPmpv899OJyHEaCziRbGQhTObnE4yA8pKZ-xmsqQ-rhVATimPhuV97X1MJ7fm6H44u1tdYXITU4oeUk00tgf557HsQEkB9-u-6dTuJOs4B4cUkONOItR62AdxOXL7Ca81Tp5Z27xczqkMN7oORANKco1WVwPigbR_S-WnSd4RVuv1TGQxlMwuN4ihQHqi2wgkRJzlDfJNwyrf=w800)](https://lh3.googleusercontent.com/yJpZHKigLjiHciZgsGumOmRyhSKKEYM9kZfO5j2b-REwwRUS3pUqPXmNN8MOddHXI3N0Y3ToTj5qj2gi988GOYjONvuJaKe5P-z9hlDGQJ45WC8SjJi6cZduefF_xWVMybmoksg4QeCvVQehK3FAE7LKUygy4ww-dEWfYKlYbOnjNAxQo0ElMjHUnN-p8uug52EXJTRvgj6JsZszP5YmAynzxcC4nuWcsXinKz6C2oyRLMwU-j5Sw-5Xu9PYnoeI4DWGqtwJ-c4zobmkWxBI1DXmK0MWDr300_1nA86eAtbpo-4Zgrm4FO-oqgsVb6zj1OzEjPBfXuuGoT-oHRpqFwNWPqu1ArP9JPufUPQsiOf67U1k6gdYH7sCPmpv899OJyHEaCziRbGQhTObnE4yA8pKZ-xmsqQ-rhVATimPhuV97X1MJ7fm6H44u1tdYXITU4oeUk00tgf557HsQEkB9-u-6dTuJOs4B4cUkONOItR62AdxOXL7Ca81Tp5Z27xczqkMN7oORANKco1WVwPigbR_S-WnSd4RVuv1TGQxlMwuN4ihQHqi2wgkRJzlDfJNwyrf=s0)
 
 Picture about the meercat trick
 
