--- a/en/activation/_posts/2015-07-20-tug-of-war.md
+++ b/en/activation/_posts/2015-07-20-tug-of-war.md
@@ -9,7 +9,7 @@ image:
 
 The idea of this game is to pull a treat on a rope through a lid.
 
-For this one you need a Pringlestube, about 60cm (23") long piece of rope or thick yarn, some tape and some sticky treats like a piece of a chicken filet or a duck filet. If you attach the tube to a cardboard box, you also need two zip ties.
+For this one you need a Pringlestube, about 60cm (23") long piece of rope or thick yarn, some tape and some sticky treats like a piece of a chicken fillet or a duck fillet. If you attach the tube to a cardboard box, you also need two zip ties.
 
 First I cut three short slashes on to the lid across each other. After this I punctured two holes to the cardboard box and to the tube as well for the zip ties. I took the lid off and I attached the tube to the box with the zip ties and some clear packing tape.
 
@@ -17,11 +17,11 @@ After I had attached the tube to the box, I put the lid back on the tube and I s
 
 Then I took about 60cm (23") long piece of rope. You need to use thick yarn or thin rope for this one. Don't use thin yarn so that your dog doesn't accidentally eat the yarn.
 
-I tied a wooden block as a handle to one end of the rope and then I tied a piece of duck filet on the other end. The knots "took" over a half of the length of the rope, so the finished rope was about 25cm (10") long. If you don't have any suitable blocks, you can use a piece of a cardboard as a handle. If you don't have that either, you can simply tie a big knot on the rope.
+I tied a wooden block as a handle to one end of the rope and then I tied a piece of duck fillet on the other end. The knots "took" over a half of the length of the rope, so the finished rope was about 25cm (10") long. If you don't have any suitable blocks, you can use a piece of a cardboard as a handle. If you don't have that either, you can simply tie a big knot on the rope.
 
 Then I just pushed the treat part of the rope through the lid. It took Miki only about 15 seconds to figure this game out.
 
-In the pictures below you can see the holes made for the zip ties, the slashes on the lid and the rope with a handle and a treat. If you have an own yard, you can also hang this tube from a tree branch or from a railing. 
+In the pictures below you can see the holes made for the zip ties, the slashes on the lid and the rope with a handle and a treat. If you have an own yard, you can also hang this tube from a tree branch or from a railing.
 
 ---
 
