--- a/aktivointi/_posts/2015-07-11-tunnelit.md
+++ b/aktivointi/_posts/2015-07-11-tunnelit.md
@@ -1,5 +1,5 @@
 ---
-title: "Tunnelit tai alitus"
+title: "Tunnelit"
 layout: article
 image:
   feature:
@@ -9,7 +9,7 @@ image:
 
 Agilitystä on varmaan monelle tuttu asia putki ja vielä sellainen minkä loppuosana on kankainen sukka.
 
-Me ollaan itse tehty apupöydästä ja pyyhkeestä tunneli, mistä Mikin pitää mennä läpi. (Itse pöytä on niin hutera, että toisen täytyy aina pitää pöydästä kiinni.) Tuota sukkaosuutta pidennetään vähän jokaisella harjoituskerralla.
+Me ollaan tehty apupöydästä ja pyyhkeestä tunneli, mistä Mikin pitää mennä läpi. (Itse pöytä on niin hutera, että toisen täytyy aina pitää pöydästä kiinni.) Tuota sukkaosuutta pidennetään vähän jokaisella harjoituskerralla.
 
 Alla olevissa kuvissa on pelkkä pöytä ilman pyyhettä, jotta Miki näkyy kuvissa.
 
